# Yurei

./: .editorconfig  .gitattributes  .gitignore  README.md  create_type.py  main.py  pyproject.toml
css/: layout.tcss
preflight/: get_xp_scaling.py  remove_sensitive.py
resources/: levelscaling.json  save_password
test_files/: SaveFile-generic.txt  SaveFile-no-unlockable.txt  SaveFile-post-nells.txt  SaveFile.txt
yurei/: __init__.py  __main__.py  crypt.py  data.py  enums.py  save.py  unlockable.py  utils.py
yurei/tui/: __init__.py  app.py  web.py
yurei/tui/widgets/: __init__.py  add_gear.py  code_editor.py  file_browser.py  level.py  money.py  unlock_gear.py  unlockables.py
yurei/types_/: __init__.py  colour.py  difficulty.py  inner_types.py  save.py
